kubernetes/apps/nextcloud/shca/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-shca
spec:
  hostnames:
    - storage.${D_HCA}
  parentRefs:
    - name: external
      namespace: network
      sectionName: https-hca
  rules:
    - backendRefs:
        - name: nextcloud-shca
          port: 8080
    - matches:
        - path:
            type: RegularExpression
            value: /.well-known/(?:card|cal)dav
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav/
            statusCode: 301
    - backendRefs:
        - name: nextcloud-shca
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /settings/ajax/checksetup
      timeouts:
        request: 300s
